# demo_nn

./: CMakeLists.txt  README.md  demo_nn.cpp
detector/: detector.cpp  detector.h  detector.hpp  label_parser.cpp  label_parser.hpp  sample_detect.cpp
gui/: bounding_box.cpp  bounding_box.hpp  mainwindow.cpp  mainwindow.h  mainwindow.hpp
models/SSD_300x300/: deploy.prototxt
sample/: CMakeLists.txt  sample_caffe.cpp
